fix bug with the hint icon (was displayed too high, margin didn't apply because the show() on the display:none <span> made it display:inline, not block.
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@89809 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/modules/ext.styleguidedemo/ext.styleguidedemo.css
+++ b/modules/ext.styleguidedemo/ext.styleguidedemo.css
@@ -15,17 +15,18 @@
 
 .mw-label {
 	display: block;
-}
-
-.mw-label .mw-help-field-hint {
-	margin-bottom: -15px;
-	height: 12px;
-	width: 12px;
+	position: relative;
 }
 
 .mw-label label {
 	margin: 0px 0px 0px 16px;
 	font-weight: bold;
+}
+
+.mw-label .mw-help-field-hint {
+	position: absolute; top: 2px; left: 0px;
+	height: 12px;
+	width: 12px;
 }
 
 .mw-htmlform-tip {
